# jira-mcp

./: .gitignore  README.md  config.example.toml  pyproject.toml
src/jira_mcp/: __main__.py  attachment_service.py  comment_normalizer.py  config.py  field_mapping.py  issue_parser.py  jira_api.py  models.py  normalizers.py  server.py
